la busqueda masiva funciona